--- a/local/templates/soc_blue/asset/src/scss/_bootstrap.scss
+++ b/local/templates/soc_blue/asset/src/scss/_bootstrap.scss
@@ -27,3 +27,4 @@
 @import "components/materials-sections-list";
 @import "components/doc-table";
 @import "components/main-info";
+@import "components/main-data-page";
