--- a/local/templates/soc_blue/asset/src/scss/style.scss
+++ b/local/templates/soc_blue/asset/src/scss/style.scss
@@ -67,7 +67,6 @@ body {
   margin: auto;
   padding-left: $container-padding;
   padding-right: $container-padding;
-
   @include breakpoint(max-width $pad-width){
     padding-left: $container-padding-pad;
     padding-right: $container-padding-pad;
@@ -104,6 +103,7 @@ main {
   text-align: left;
   margin-top:0;
   font-size: 1.6em;
+  margin-bottom: 1.2em;
   @include breakpoint(max-width $pad-width){
     font-size: 1.2em;
   }
@@ -113,13 +113,13 @@ main {
   font-size: 1.4em;
   margin-top: 1.2em;
   margin-bottom: 1.2em;
-  line-height: 1.5em;
+  line-height: 1.4em;
   @include breakpoint(max-width $pad-width){
     font-size: 1.2em;
   }
 }
 .section-block{
-  margin-top: 4rem;
+  margin-top: 2rem;
   margin-bottom: 1rem;
   @include breakpoint(max-width $pad-width){
     margin-top: 2.5rem;
@@ -135,16 +135,17 @@ a{
 .table{
   display: table;
   width: 100%;
-  &.table-blue{
+  &.table-grey{
     .table-row{
       &:nth-child(even){
-        background-color: #e9f1ff;
+        background-color: #f7f7f7;
       }
     }
     .table-cell{
       padding: 12px;
     }
   }
+  
 }
 .table-row{
   display: table-row;
