--- a/local/templates/soc_blue/asset/src/scss/components/_left-menu.scss
+++ b/local/templates/soc_blue/asset/src/scss/components/_left-menu.scss
@@ -13,19 +13,23 @@
         position: relative;
         padding-right: 1em;
         color: $color-accent;
+        &.root-item-selected+ul{
+            display: block;
+        }
     }
     >li{
         >ul{
             margin: 0;
             padding: 0;
             list-style: none;
+            display: none;
             a{
                 display: block;
                 text-decoration: none;
                 padding: 5px 0;
                 line-height: 1.4em;
                 color:#5f5f5f;
-                &:hover, &.selected{
+                &:hover, &.item-selected{
                     color: #000;
                 }
             }
