--- a/local/templates/soc_blue/asset/src/scss/components/_breadcrumbs.scss
+++ b/local/templates/soc_blue/asset/src/scss/components/_breadcrumbs.scss
@@ -1,6 +1,8 @@
 .bx-breadcrumb{
     display: flex;
     font-size: 14px;
+    margin-bottom: 1rem;
+    margin-top: 0.3rem;
     >div{
         margin-right: 5px;
     }
