--- a/local/templates/soc_blue/asset/src/scss/_bootstrap.scss
+++ b/local/templates/soc_blue/asset/src/scss/_bootstrap.scss
@@ -28,3 +28,4 @@
 @import "components/doc-table";
 @import "components/main-info";
 @import "components/main-data-page";
+@import "components/doc.list";
