--- a/local/templates/soc_blue/asset/src/scss/components/_breadcrumbs.scss
+++ b/local/templates/soc_blue/asset/src/scss/components/_breadcrumbs.scss
@@ -3,6 +3,7 @@
     font-size: 14px;
     margin-bottom: 1rem;
     margin-top: 0.3rem;
+    flex-wrap: wrap;
     >div{
         margin-right: 5px;
     }
