--- a/local/templates/soc_blue/asset/src/scss/components/_left-menu.scss
+++ b/local/templates/soc_blue/asset/src/scss/components/_left-menu.scss
@@ -13,6 +13,9 @@
         position: relative;
         padding-right: 1em;
         color: $color-accent;
+        &.root-item-selected{
+            color: #014599;
+        }
         &.root-item-selected+ul{
             display: block;
         }
