--- a/local/templates/soc_blue/asset/src/scss/components/_news-list.scss
+++ b/local/templates/soc_blue/asset/src/scss/components/_news-list.scss
@@ -7,7 +7,7 @@
         .news-item{
             margin: 12px;
             width: calc(33.33% - 24px);
-            background-color: $color-primary-light;
+            background-color: #f9f9f9;
             height: 266px;
             display: flex;
             flex-direction: column;
