--- a/local/templates/soc_blue/asset/src/scss/_bootstrap.scss
+++ b/local/templates/soc_blue/asset/src/scss/_bootstrap.scss
@@ -29,3 +29,4 @@
 @import "components/main-info";
 @import "components/main-data-page";
 @import "components/doc-list";
+@import "components/feeback";
