--- a/local/templates/soc_blue/asset/src/scss/_bootstrap.scss
+++ b/local/templates/soc_blue/asset/src/scss/_bootstrap.scss
@@ -30,3 +30,4 @@
 @import "components/main-data-page";
 @import "components/doc-list";
 @import "components/feeback";
+@import "components/search-page";
