--- a/local/templates/soc_blue/asset/src/scss/components/_main-nav.scss
+++ b/local/templates/soc_blue/asset/src/scss/components/_main-nav.scss
@@ -31,7 +31,7 @@
                     text-decoration: underline;
                 }
                 &:hover, &.selected{
-                    color: #064491;
+                    color: #03244d;
                 }
             }
         }
