--- a/local/templates/soc_blue/asset/src/scss/style.scss
+++ b/local/templates/soc_blue/asset/src/scss/style.scss
@@ -77,9 +77,7 @@ main {
   display: flex;
   min-height: calc(100vh - #{$footer-height});
   padding-bottom: 40px;
-  @include breakpoint(max-width $desktop-width){
-    padding-top: 60px;
-  }
+
 }
 .shadow{
   box-shadow: 0 1px 5px 1px rgba(0,0,0,.2);
@@ -89,6 +87,9 @@ main {
   padding-top: 1em;
   padding-bottom: 2em;
   margin-bottom: 3em;
+  @include breakpoint(max-width $desktop-width){
+    padding-top: 60px;
+  }
 }
 .content{
   width: 100%;
@@ -124,6 +125,13 @@ main {
   @include breakpoint(max-width $pad-width){
     margin-top: 2.5rem;
   }
+}
+.page-404 {
+  text-align: center;
+  font-size: 22px;
+}
+.pic-404 img{
+  max-width: 100%;
 }
 a{
   color: $color-accent;
