--- a/local/templates/soc_blue/asset/src/scss/components/_left-menu.scss
+++ b/local/templates/soc_blue/asset/src/scss/components/_left-menu.scss
@@ -25,7 +25,7 @@
             margin: 0;
             padding: 0;
             list-style: none;
-            display: none;
+            //display: none;
             a{
                 display: block;
                 text-decoration: none;
