--- a/local/templates/soc_blue/asset/src/scss/_boot.scss
+++ b/local/templates/soc_blue/asset/src/scss/_boot.scss
@@ -17,7 +17,6 @@
 @import "buttons";
 @import "components/main-slider";
 @import "components/left-menu";
-@import "components/work-time";
 @import "pages/index";
 @import "mobile-header";
 @import "components/links-slider";
@@ -31,3 +30,4 @@
 @import "components/doc-list";
 @import "components/feeback";
 @import "components/search-page";
+@import "components/vison-ver";
