--- a/local/templates/soc_blue/asset/src/scss/_sprite-generated.scss
+++ b/local/templates/soc_blue/asset/src/scss/_sprite-generated.scss
@@ -9,6 +9,105 @@
 //
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
+$sprite-calendar-grey-name: 'sprite-calendar-grey';
+$sprite-calendar-grey-x: 32px;
+$sprite-calendar-grey-y: 0px;
+$sprite-calendar-grey-offset-x: -32px;
+$sprite-calendar-grey-offset-y: 0px;
+$sprite-calendar-grey-width: 24px;
+$sprite-calendar-grey-height: 24px;
+$sprite-calendar-grey-total-width: 104px;
+$sprite-calendar-grey-total-height: 80px;
+$sprite-calendar-grey-image: '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42';
+$sprite-calendar-grey: (32px, 0px, -32px, 0px, 24px, 24px, 104px, 80px, '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42', 'sprite-calendar-grey', );
+$sprite-calendar-name: 'sprite-calendar';
+$sprite-calendar-x: 0px;
+$sprite-calendar-y: 32px;
+$sprite-calendar-offset-x: 0px;
+$sprite-calendar-offset-y: -32px;
+$sprite-calendar-width: 24px;
+$sprite-calendar-height: 24px;
+$sprite-calendar-total-width: 104px;
+$sprite-calendar-total-height: 80px;
+$sprite-calendar-image: '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42';
+$sprite-calendar: (0px, 32px, 0px, -32px, 24px, 24px, 104px, 80px, '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42', 'sprite-calendar', );
+$sprite-email-name: 'sprite-email';
+$sprite-email-x: 24px;
+$sprite-email-y: 32px;
+$sprite-email-offset-x: -24px;
+$sprite-email-offset-y: -32px;
+$sprite-email-width: 24px;
+$sprite-email-height: 24px;
+$sprite-email-total-width: 104px;
+$sprite-email-total-height: 80px;
+$sprite-email-image: '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42';
+$sprite-email: (24px, 32px, -24px, -32px, 24px, 24px, 104px, 80px, '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42', 'sprite-email', );
+$sprite-eye-blue-name: 'sprite-eye-blue';
+$sprite-eye-blue-x: 56px;
+$sprite-eye-blue-y: 0px;
+$sprite-eye-blue-offset-x: -56px;
+$sprite-eye-blue-offset-y: 0px;
+$sprite-eye-blue-width: 24px;
+$sprite-eye-blue-height: 24px;
+$sprite-eye-blue-total-width: 104px;
+$sprite-eye-blue-total-height: 80px;
+$sprite-eye-blue-image: '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42';
+$sprite-eye-blue: (56px, 0px, -56px, 0px, 24px, 24px, 104px, 80px, '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42', 'sprite-eye-blue', );
+$sprite-eye-grey-name: 'sprite-eye-grey';
+$sprite-eye-grey-x: 56px;
+$sprite-eye-grey-y: 24px;
+$sprite-eye-grey-offset-x: -56px;
+$sprite-eye-grey-offset-y: -24px;
+$sprite-eye-grey-width: 24px;
+$sprite-eye-grey-height: 24px;
+$sprite-eye-grey-total-width: 104px;
+$sprite-eye-grey-total-height: 80px;
+$sprite-eye-grey-image: '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42';
+$sprite-eye-grey: (56px, 24px, -56px, -24px, 24px, 24px, 104px, 80px, '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42', 'sprite-eye-grey', );
+$sprite-eye-name: 'sprite-eye';
+$sprite-eye-x: 0px;
+$sprite-eye-y: 56px;
+$sprite-eye-offset-x: 0px;
+$sprite-eye-offset-y: -56px;
+$sprite-eye-width: 24px;
+$sprite-eye-height: 24px;
+$sprite-eye-total-width: 104px;
+$sprite-eye-total-height: 80px;
+$sprite-eye-image: '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42';
+$sprite-eye: (0px, 56px, 0px, -56px, 24px, 24px, 104px, 80px, '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42', 'sprite-eye', );
+$sprite-phone-name: 'sprite-phone';
+$sprite-phone-x: 24px;
+$sprite-phone-y: 56px;
+$sprite-phone-offset-x: -24px;
+$sprite-phone-offset-y: -56px;
+$sprite-phone-width: 24px;
+$sprite-phone-height: 24px;
+$sprite-phone-total-width: 104px;
+$sprite-phone-total-height: 80px;
+$sprite-phone-image: '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42';
+$sprite-phone: (24px, 56px, -24px, -56px, 24px, 24px, 104px, 80px, '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42', 'sprite-phone', );
+$sprite-place-name: 'sprite-place';
+$sprite-place-x: 48px;
+$sprite-place-y: 56px;
+$sprite-place-offset-x: -48px;
+$sprite-place-offset-y: -56px;
+$sprite-place-width: 24px;
+$sprite-place-height: 24px;
+$sprite-place-total-width: 104px;
+$sprite-place-total-height: 80px;
+$sprite-place-image: '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42';
+$sprite-place: (48px, 56px, -48px, -56px, 24px, 24px, 104px, 80px, '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42', 'sprite-place', );
+$sprite-search-name: 'sprite-search';
+$sprite-search-x: 80px;
+$sprite-search-y: 0px;
+$sprite-search-offset-x: -80px;
+$sprite-search-offset-y: 0px;
+$sprite-search-width: 24px;
+$sprite-search-height: 24px;
+$sprite-search-total-width: 104px;
+$sprite-search-total-height: 80px;
+$sprite-search-image: '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42';
+$sprite-search: (80px, 0px, -80px, 0px, 24px, 24px, 104px, 80px, '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42', 'sprite-search', );
 $sprite-smarthome-name: 'sprite-smarthome';
 $sprite-smarthome-x: 0px;
 $sprite-smarthome-y: 0px;
@@ -16,10 +115,109 @@ $sprite-smarthome-offset-x: 0px;
 $sprite-smarthome-offset-y: 0px;
 $sprite-smarthome-width: 32px;
 $sprite-smarthome-height: 32px;
-$sprite-smarthome-total-width: 32px;
-$sprite-smarthome-total-height: 32px;
-$sprite-smarthome-image: '/sprites/sprite.png?hash=9e0eb9fbe82ba13210cd149db886af36';
-$sprite-smarthome: (0px, 0px, 0px, 0px, 32px, 32px, 32px, 32px, '/sprites/sprite.png?hash=9e0eb9fbe82ba13210cd149db886af36', 'sprite-smarthome', );
+$sprite-smarthome-total-width: 104px;
+$sprite-smarthome-total-height: 80px;
+$sprite-smarthome-image: '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42';
+$sprite-smarthome: (0px, 0px, 0px, 0px, 32px, 32px, 104px, 80px, '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42', 'sprite-smarthome', );
+$retina-sprite-calendar-grey-name: 'retina_sprite-calendar-grey';
+$retina-sprite-calendar-grey-x: 64px;
+$retina-sprite-calendar-grey-y: 0px;
+$retina-sprite-calendar-grey-offset-x: -64px;
+$retina-sprite-calendar-grey-offset-y: 0px;
+$retina-sprite-calendar-grey-width: 48px;
+$retina-sprite-calendar-grey-height: 48px;
+$retina-sprite-calendar-grey-total-width: 208px;
+$retina-sprite-calendar-grey-total-height: 160px;
+$retina-sprite-calendar-grey-image: '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7';
+$retina-sprite-calendar-grey: (64px, 0px, -64px, 0px, 48px, 48px, 208px, 160px, '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7', 'retina_sprite-calendar-grey', );
+$retina-sprite-calendar-name: 'retina_sprite-calendar';
+$retina-sprite-calendar-x: 0px;
+$retina-sprite-calendar-y: 64px;
+$retina-sprite-calendar-offset-x: 0px;
+$retina-sprite-calendar-offset-y: -64px;
+$retina-sprite-calendar-width: 48px;
+$retina-sprite-calendar-height: 48px;
+$retina-sprite-calendar-total-width: 208px;
+$retina-sprite-calendar-total-height: 160px;
+$retina-sprite-calendar-image: '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7';
+$retina-sprite-calendar: (0px, 64px, 0px, -64px, 48px, 48px, 208px, 160px, '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7', 'retina_sprite-calendar', );
+$retina-sprite-email-name: 'retina_sprite-email';
+$retina-sprite-email-x: 48px;
+$retina-sprite-email-y: 64px;
+$retina-sprite-email-offset-x: -48px;
+$retina-sprite-email-offset-y: -64px;
+$retina-sprite-email-width: 48px;
+$retina-sprite-email-height: 48px;
+$retina-sprite-email-total-width: 208px;
+$retina-sprite-email-total-height: 160px;
+$retina-sprite-email-image: '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7';
+$retina-sprite-email: (48px, 64px, -48px, -64px, 48px, 48px, 208px, 160px, '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7', 'retina_sprite-email', );
+$retina-sprite-eye-blue-name: 'retina_sprite-eye-blue';
+$retina-sprite-eye-blue-x: 112px;
+$retina-sprite-eye-blue-y: 0px;
+$retina-sprite-eye-blue-offset-x: -112px;
+$retina-sprite-eye-blue-offset-y: 0px;
+$retina-sprite-eye-blue-width: 48px;
+$retina-sprite-eye-blue-height: 48px;
+$retina-sprite-eye-blue-total-width: 208px;
+$retina-sprite-eye-blue-total-height: 160px;
+$retina-sprite-eye-blue-image: '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7';
+$retina-sprite-eye-blue: (112px, 0px, -112px, 0px, 48px, 48px, 208px, 160px, '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7', 'retina_sprite-eye-blue', );
+$retina-sprite-eye-grey-name: 'retina_sprite-eye-grey';
+$retina-sprite-eye-grey-x: 112px;
+$retina-sprite-eye-grey-y: 48px;
+$retina-sprite-eye-grey-offset-x: -112px;
+$retina-sprite-eye-grey-offset-y: -48px;
+$retina-sprite-eye-grey-width: 48px;
+$retina-sprite-eye-grey-height: 48px;
+$retina-sprite-eye-grey-total-width: 208px;
+$retina-sprite-eye-grey-total-height: 160px;
+$retina-sprite-eye-grey-image: '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7';
+$retina-sprite-eye-grey: (112px, 48px, -112px, -48px, 48px, 48px, 208px, 160px, '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7', 'retina_sprite-eye-grey', );
+$retina-sprite-eye-name: 'retina_sprite-eye';
+$retina-sprite-eye-x: 0px;
+$retina-sprite-eye-y: 112px;
+$retina-sprite-eye-offset-x: 0px;
+$retina-sprite-eye-offset-y: -112px;
+$retina-sprite-eye-width: 48px;
+$retina-sprite-eye-height: 48px;
+$retina-sprite-eye-total-width: 208px;
+$retina-sprite-eye-total-height: 160px;
+$retina-sprite-eye-image: '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7';
+$retina-sprite-eye: (0px, 112px, 0px, -112px, 48px, 48px, 208px, 160px, '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7', 'retina_sprite-eye', );
+$retina-sprite-phone-name: 'retina_sprite-phone';
+$retina-sprite-phone-x: 48px;
+$retina-sprite-phone-y: 112px;
+$retina-sprite-phone-offset-x: -48px;
+$retina-sprite-phone-offset-y: -112px;
+$retina-sprite-phone-width: 48px;
+$retina-sprite-phone-height: 48px;
+$retina-sprite-phone-total-width: 208px;
+$retina-sprite-phone-total-height: 160px;
+$retina-sprite-phone-image: '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7';
+$retina-sprite-phone: (48px, 112px, -48px, -112px, 48px, 48px, 208px, 160px, '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7', 'retina_sprite-phone', );
+$retina-sprite-place-name: 'retina_sprite-place';
+$retina-sprite-place-x: 96px;
+$retina-sprite-place-y: 112px;
+$retina-sprite-place-offset-x: -96px;
+$retina-sprite-place-offset-y: -112px;
+$retina-sprite-place-width: 48px;
+$retina-sprite-place-height: 48px;
+$retina-sprite-place-total-width: 208px;
+$retina-sprite-place-total-height: 160px;
+$retina-sprite-place-image: '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7';
+$retina-sprite-place: (96px, 112px, -96px, -112px, 48px, 48px, 208px, 160px, '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7', 'retina_sprite-place', );
+$retina-sprite-search-name: 'retina_sprite-search';
+$retina-sprite-search-x: 160px;
+$retina-sprite-search-y: 0px;
+$retina-sprite-search-offset-x: -160px;
+$retina-sprite-search-offset-y: 0px;
+$retina-sprite-search-width: 48px;
+$retina-sprite-search-height: 48px;
+$retina-sprite-search-total-width: 208px;
+$retina-sprite-search-total-height: 160px;
+$retina-sprite-search-image: '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7';
+$retina-sprite-search: (160px, 0px, -160px, 0px, 48px, 48px, 208px, 160px, '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7', 'retina_sprite-search', );
 $retina-sprite-smarthome-name: 'retina_sprite-smarthome';
 $retina-sprite-smarthome-x: 0px;
 $retina-sprite-smarthome-y: 0px;
@@ -27,27 +225,45 @@ $retina-sprite-smarthome-offset-x: 0px;
 $retina-sprite-smarthome-offset-y: 0px;
 $retina-sprite-smarthome-width: 64px;
 $retina-sprite-smarthome-height: 64px;
-$retina-sprite-smarthome-total-width: 64px;
-$retina-sprite-smarthome-total-height: 64px;
-$retina-sprite-smarthome-image: '/sprites/sprite@2x.png?hash=dbb9a58115234a06f04dc72848630115';
-$retina-sprite-smarthome: (0px, 0px, 0px, 0px, 64px, 64px, 64px, 64px, '/sprites/sprite@2x.png?hash=dbb9a58115234a06f04dc72848630115', 'retina_sprite-smarthome', );
-$spritesheet-width: 32px;
-$spritesheet-height: 32px;
-$spritesheet-image: '/sprites/sprite.png?hash=9e0eb9fbe82ba13210cd149db886af36';
-$spritesheet-sprites: ($sprite-smarthome, );
-$spritesheet: (32px, 32px, '/sprites/sprite.png?hash=9e0eb9fbe82ba13210cd149db886af36', $spritesheet-sprites, );
-$retina-spritesheet-width: 64px;
-$retina-spritesheet-height: 64px;
-$retina-spritesheet-image: '/sprites/sprite@2x.png?hash=dbb9a58115234a06f04dc72848630115';
-$retina-spritesheet-sprites: ($retina-sprite-smarthome, );
-$retina-spritesheet: (64px, 64px, '/sprites/sprite@2x.png?hash=dbb9a58115234a06f04dc72848630115', $retina-spritesheet-sprites, );
+$retina-sprite-smarthome-total-width: 208px;
+$retina-sprite-smarthome-total-height: 160px;
+$retina-sprite-smarthome-image: '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7';
+$retina-sprite-smarthome: (0px, 0px, 0px, 0px, 64px, 64px, 208px, 160px, '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7', 'retina_sprite-smarthome', );
+$spritesheet-width: 104px;
+$spritesheet-height: 80px;
+$spritesheet-image: '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42';
+$spritesheet-sprites: ($sprite-calendar-grey, $sprite-calendar, $sprite-email, $sprite-eye-blue, $sprite-eye-grey, $sprite-eye, $sprite-phone, $sprite-place, $sprite-search, $sprite-smarthome, );
+$spritesheet: (104px, 80px, '/local/templates/soc_blue/asset/dist/sprites/sprite.png?hash=e728210ff50d534b843977e608d69a42', $spritesheet-sprites, );
+$retina-spritesheet-width: 208px;
+$retina-spritesheet-height: 160px;
+$retina-spritesheet-image: '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7';
+$retina-spritesheet-sprites: ($retina-sprite-calendar-grey, $retina-sprite-calendar, $retina-sprite-email, $retina-sprite-eye-blue, $retina-sprite-eye-grey, $retina-sprite-eye, $retina-sprite-phone, $retina-sprite-place, $retina-sprite-search, $retina-sprite-smarthome, );
+$retina-spritesheet: (208px, 160px, '/local/templates/soc_blue/asset/dist/sprites/sprite@2x.png?hash=14658dbae32a7a3f6bb16368920784d7', $retina-spritesheet-sprites, );
 
 // These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
 //
 // The list formatted variables are intended for mixins like `retina-sprite` and `retina-sprites`.
+$sprite-calendar-grey-group-name: 'sprite-calendar-grey';
+$sprite-calendar-grey-group: ('sprite-calendar-grey', $sprite-calendar-grey, $retina-sprite-calendar-grey, );
+$sprite-calendar-group-name: 'sprite-calendar';
+$sprite-calendar-group: ('sprite-calendar', $sprite-calendar, $retina-sprite-calendar, );
+$sprite-email-group-name: 'sprite-email';
+$sprite-email-group: ('sprite-email', $sprite-email, $retina-sprite-email, );
+$sprite-eye-blue-group-name: 'sprite-eye-blue';
+$sprite-eye-blue-group: ('sprite-eye-blue', $sprite-eye-blue, $retina-sprite-eye-blue, );
+$sprite-eye-grey-group-name: 'sprite-eye-grey';
+$sprite-eye-grey-group: ('sprite-eye-grey', $sprite-eye-grey, $retina-sprite-eye-grey, );
+$sprite-eye-group-name: 'sprite-eye';
+$sprite-eye-group: ('sprite-eye', $sprite-eye, $retina-sprite-eye, );
+$sprite-phone-group-name: 'sprite-phone';
+$sprite-phone-group: ('sprite-phone', $sprite-phone, $retina-sprite-phone, );
+$sprite-place-group-name: 'sprite-place';
+$sprite-place-group: ('sprite-place', $sprite-place, $retina-sprite-place, );
+$sprite-search-group-name: 'sprite-search';
+$sprite-search-group: ('sprite-search', $sprite-search, $retina-sprite-search, );
 $sprite-smarthome-group-name: 'sprite-smarthome';
 $sprite-smarthome-group: ('sprite-smarthome', $sprite-smarthome, $retina-sprite-smarthome, );
-$retina-groups: ($sprite-smarthome-group, );
+$retina-groups: ($sprite-calendar-grey-group, $sprite-calendar-group, $sprite-email-group, $sprite-eye-blue-group, $sprite-eye-grey-group, $sprite-eye-group, $sprite-phone-group, $sprite-place-group, $sprite-search-group, $sprite-smarthome-group, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
