--- a/local/templates/soc_blue/asset/src/scss/components/_main-nav.scss
+++ b/local/templates/soc_blue/asset/src/scss/components/_main-nav.scss
@@ -27,6 +27,7 @@
                 text-decoration: none;
                 padding-left: 10px;
                 padding-right: 10px;
+                text-transform: uppercase;
                 &:hover{
                     text-decoration: underline;
                 }
